--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ style.css body {
 .img-mini {
     height: 140px;
     border-radius: 20px;
+    position: center;
 }
 
 .h2-white {
@@ -103,6 +104,7 @@ style.css body {
 .img-medium {
     height: 270px;
     border-radius: 20px;
+    position: center;
 }
 
 .a-link-white {
